<resources>
    <string name="app_name">AndroidFinance</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_operation">Operation</string>
    <string name="menu_score">Score</string>
    <string name="menu_category">Category</string>
    <string name="menu_analitic">Analitic</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="loading_text">Loading</string>
    <string name="menu_other">Other</string>
</resources>
