<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_operation"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_operation" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_score" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_analitic"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_analitic" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
